# hotel_reservation_rust

./: .gitignore  Cargo.toml  Makefile  README.md
commons/: Cargo.toml
commons/src/: commons.rs  db_config.rs  interceptors.rs  tracing.rs
config/: Cargo.toml
config/src/: config.rs
monolithic-service/: Cargo.toml
monolithic-service/src/: lib.rs  mono_service.rs
monolithic-service/src/mono_service/: geo.rs  profile.rs  rate.rs  recommendation.rs  research.rs  user.rs
services/geo/: Cargo.toml  build.rs
services/geo/proto/: geo_api.proto
services/geo/src/: geo.rs  pb.rs
services/geo/src/pb/: geo_api.rs
services/profile/: Cargo.toml  build.rs
services/profile/proto/: profile_api.proto
services/profile/src/: profile.rs
services/profile/src/pb/: mod.rs  profile_api.rs
services/rate/: Cargo.toml  build.rs
services/rate/proto/: rate_api.proto
services/rate/src/: pb.rs  rate.rs
services/rate/src/pb/: rate_api.rs
services/recommendation/: Cargo.toml  build.rs
services/recommendation/proto/: recomm_api.proto
services/recommendation/src/: pb.rs  recommendation.rs
services/recommendation/src/pb/: mod.rs  recomm_api.rs
services/research/: Cargo.toml  build.rs
services/research/proto/: resch_api.proto
services/research/src/: research.rs
services/research/src/pb/: mod.rs  resch_api.rs
services/reservation/: Cargo.toml  build.rs
services/reservation/proto/: reserv_api.proto
services/reservation/src/: pb.rs  reservation.rs
services/reservation/src/pb/: reserv_api.rs
services/user/: Cargo.toml  build.rs
services/user/proto/: user_api.proto
services/user/src/: user.rs
services/user/src/pb/: user_api.rs
test-worker/: Cargo.toml
test-worker/src/: get_recmd.rs  peek_info.rs
test_worker/: Cargo.toml
test_worker/src/: main.rs
