[package]
name = "test-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_get_recmd"
path = "src/get_recmd.rs"

[[bin]]
name = "test_peek_info"
path = "src/peek_info.rs"

[dependencies]
commons = { path = "../commons" }
user = { path = "../services/user" }
recommendation = { path = "../services/recommendation" }
geo = { path = "../services/geo" }
monolithic-service = { path = "../monolithic-service" }
rand = "0.8.5"
