[package]
name = "test_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
user = { path = "../services/user" }
profile = { path = "../services/profile" }

rand = "0.8.5"
tokio = { version = "1.29", features = ["full"] }
mongodb = "2.6.0"
futures = "0.3"
