[package]
name = "test_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
user = { path = "../services/user" }
recommendation = { path = "../services/recommendation" }
rand = "0.8.5"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
