[package]
name = "profile"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "profile-service"
path = "src/profile.rs"

[lib]
path = "src/lib.rs"


[dependencies]
commons = { path = "../../commons" }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.9"
