[package]
name = "rate"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "rate-service"
path = "src/rate.rs"


[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.29", features = ["full"] }
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }


[build-dependencies]
tonic-build = "0.9"
