[package]
name = "recommendation"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "recommendation-service"
path = "src/recommendation.rs"


[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.29", features = ["full"] }
# microservice dependencies
config = { path = "../../config" }
research = { path = "../research" }
rate = { path = "../rate" }
profile = { path = "../profile" }
# tracing
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }


[build-dependencies]
tonic-build = "0.9"
