[package]
name = "recommendation"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "recommendation-service"
path = "src/recommendation.rs"

[lib]
path = "src/lib.rs"


[dependencies]
commons = { path = "../../commons" }
research = { path = "../research" }
rate = { path = "../rate" }
profile = { path = "../profile" }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.9"
