[package]
name = "research"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "research-service"
path = "src/research.rs"


[dependencies]
commons = { path = "../../commons" }
geo = { path = "../geo" }
tonic = { workspace = true }
prost = { workspace = true }


[build-dependencies]
tonic-build = "0.9"
