[package]
name = "reservation"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "reservation-service"
path = "src/reservation.rs"


[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.29", features = ["full"] }
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
config = { path = "../../config" }
user = { path = "../user" }


[build-dependencies]
tonic-build = "0.9"
