[package]
name = "reservation"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "reservation-service"
path = "src/reservation.rs"

[lib]
path = "src/lib.rs"


[dependencies]
commons = { path = "../../commons" }
user = { path = "../user" }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.9"
