[package]
name = "user"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-service"
path = "src/user.rs"

[lib]
path = "src/lib.rs"


[dependencies]
commons = { path = "../../commons" }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
